--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,10 +78,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: code39
-      fonts:
-        - asset: lib/assets/font/LibreBarcode39Text-Regular.ttf
+  #fonts:
+  #  - family: code39
+  #   fonts:
+  #      - asset: lib/assets/font/LibreBarcode39Text-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
